--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - beautifulsoup4 
   - requests
   - pip
+  - streamlit
   - pip:
       - yfinance  
 prefix: /Users/tobias/miniforge3/envs/sentiment_dashboard
