added alembic modified everything to work as celery tasks with this, some sites scarping is now throttled sentiment model now already downloaded during build time with docker

--- a/environment.yml
+++ b/environment.yml
@@ -18,4 +18,5 @@ dependencies:
   - alembic
   - pip:
       - yfinance  
+      - "celery[redis]"
 prefix: /Users/tobias/miniforge3/envs/sentiment_dashboard
