--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+sentiment/__pycache__/
+.docker_temp*
 *.py[cod]
 *$py.class
-
+.DS_Store
+data/
+docker_data/
 # C extensions
 *.so
 
