--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,24 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Dash",
-            "type": "python",
-            "request": "launch",
-            "program": "sentiment/dashboard.py",
-            "console": "integratedTerminal",
-            "justMyCode": true
-        },
+
         {
             "name": "Board",
             "type": "python",
             "request": "launch",
             "module": "streamlit",
             "console": "integratedTerminal",
+            // do not load docker-compose env file
+            "envFile": "${workspaceFolder}/.envx",
+
             "justMyCode": true,
             "args": ["run", "sentiment/board.py"]
         },
-
+        /*
         {
             "name": "Scrape",
             "type": "python",
@@ -29,6 +25,39 @@
             "program": "sentiment/scrape.py",
             "console": "integratedTerminal",
             "justMyCode": true
+        },*/
+
+        {
+            "name": "Celery - App",
+            "type": "python",
+            "request": "launch",
+            "module": "celery",
+            "console": "integratedTerminal",
+            // do not load docker-compose env file
+            "envFile": "${workspaceFolder}/.envx",
+            "justMyCode": true,
+            "args": [
+                "-A",
+                "sentiment.celery_app",
+                "worker",
+                "-Q",
+                "scrape,sentiment",
+                // "--autoscale=8,1",
+                "--concurrency=2",
+                "--loglevel=INFO"
+            ]
+        },
+        {
+            "name": "Alembic upgrade",
+            "type": "python",
+            "request": "launch",
+            "module": "alembic",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "upgrade",
+                "head",
+            ]
         }
 
     ]
