--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - 6379:6379
     volumes:
       - ${REDIS_DATA}:/data
+      - /etc/localtime:/etc/localtime:ro
 
   adminer:
     image: adminer
@@ -42,6 +43,7 @@ services:
     image: hulk66/sentiment:${VERSION}
     volumes:
       - ${LOG_VOLUME}:/var/log
+      - /etc/localtime:/etc/localtime:ro
     depends_on:
       - db
       - redis
@@ -96,3 +98,6 @@ services:
       WAIT_HOSTS_TIMEOUT: 120
       WAIT_AFTER_HOSTS: 2
       # - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+
+networks:
+  
